<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MeshTalk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">No Default Identity</string>
    <string name="nav_header_subtitle">Select a default identity to see it here.</string>
    <string name="nav_header_desc">Navigation header, default identity image.</string>
    <string name="action_settings">Settings</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_conversation">Conversation</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_identities">Identities</string>
    <string name="pref_category_general">General</string>
    <string name="first_start_dialog_title">First Time Setup…</string>
    <string name="loading">Loading…</string>
    <string name="progress_init_loading_keystore">Loading Keystore…</string>
    <string name="progress_init_generating_app_key">Generating App Key…</string>
    <string name="progress_init_finishing">Finishing…</string>
    <string name="pref_category_security">Security</string>
    <string name="pref_title_self_destruct">Self Destruct…</string>
    <string name="pref_summary_self_destruct">Select this to wipe all the settings, identities and messages from this device.</string>
    <string name="pref_dialog_self_destruct">This will delete all the messages, identities and settings from this device and generate a new app key. Are you sure you want to continue?</string>
    <string name="action_yes">Yes!</string>
    <string name="action_no">No</string>
    <string name="toast_self_destruct">Press again to self destruct…</string>
    <string name="progress_self_destruct_deleting_contacts">Deleting Contacts…</string>
    <string name="progress_self_destruct_deleting_app_key">Deleting App Key…</string>
    <string name="progress_self_destruct_deleting_messages">Deleting Messages…</string>
    <string name="progress_self_destruct_deleting_chats">Deleting Chats…</string>
    <string name="progress_self_destruct_deleting_identities">Deleting Identities…</string>
    <string name="progress_self_destruct_finished">Self Destruct Finished!</string>
    <string name="progress_self_destruct_finished_message">Self destruct has finished. The app will now quit and go through initial setup again when it\'s started again.</string>
    <string name="action_okay">Okay</string>
    <string name="progress_init_generating_identity">Generating Identity…</string>
    <string name="progress_init_generating_iv">Generating Device IV…</string>
    <string name="dialog_new_identity_intro_text">Fill out the form below to create a new identity.</string>
    <string name="dialog_new_identity_identity_name">Identity Name</string>
    <string name="dialog_new_identity_name_label">Name</string>
    <string name="dialog_new_identity_save">Save</string>
    <string name="dialog_new_identity_title">New Identity…</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="dialog_saving_title">Saving…</string>
    <string name="dialog_saving_saving_identity">Saving Identity..</string>
    <string name="dialog_saving_generating_keys">Generating Keys…</string>
    <string name="dialog_saving_creating_identity">Creating Identity…</string>
    <string name="list_item_identity_name_label">Name</string>
    <string name="list_item_identity_public_key_label" translatable="false" tools:ignore="TypographyDashes">a339e1ec-a156-443d-91d3-fd0b3e8f32ed</string>
    <string name="list_item_identity_default_hint">Selecting this determines the default identity.</string>
    <string name="dialog_set_default_identity_title">Set Default?</string>
    <string name="dialog_set_default_identity_message">Do you want to use this identity as default?</string>
    <string name="dialog_unset_default_identity_title">Remove Default?</string>
    <string name="dialog_unset_default_identity_message">Do you want to remove this as the default identity?</string>
    <string name="identity_list_empty">No Identities…</string>
    <string name="contact_list_empty">No contacts…</string>
    <string name="list_item_contact_name_label">Name</string>
    <string name="list_item_contact_public_key_label" translatable="false" tools:ignore="TypographyDashes">a339e1ec-a156-443d-91d3-fd0b3e8f32ed</string>
    <string name="list_item_contact_start_chat_hint">Click this button to start a new chat with the corresponding contact.</string>
    <string name="dialog_new_contact_title">New Contact…</string>
    <string name="dialog_new_contact_decision_message">You can either enter the contact details manually, or scan a QR code.</string>
    <string name="action_add_manually">Add Manually</string>
    <string name="action_scan_qr_code">Scan QR</string>
    <string name="dialog_new_contact_name_label">Name</string>
    <string name="dialog_new_contact_contact_name">Name</string>
    <string name="dialog_new_contact_uuid_label">UUID</string>
    <string name="dialog_new_contact_contact_uuid">UUID</string>
    <string name="dialog_new_contact_public_key_label">Public Key</string>
    <string name="dialog_new_contact_contact_public_key">Public Key</string>
    <string name="dialog_saving_creating_contact">Creating Contact…</string>
    <string name="action_copy_public_key_pre">"Public key for "</string>
    <string name="action_copy_public_key_post">" copied to clipboard!"</string>
    <string name="dialog_error_title">Error!</string>
    <string name="dialog_saving_saving_contact">Saving Contact…</string>
    <string name="dialog_new_contact_error_message">There was an error saving the contact. Make sure that you didn\'t paste in any newlines or spaces.</string>
    <string name="dialog_identity_copy_message">To share your contact details, you can either show a QR Code to scan with another app (or screenshot and share) or you can copy the contact details to the clipboard as plain text.</string>
    <string name="action_copy_public_key">Copy Public Key</string>
    <string name="action_copy_uuid">Copy UUID</string>
    <string name="action_copy_uuid_pre">"UUID for "</string>
    <string name="action_copy_uuid_post">" copied to clipboard!"</string>
    <string name="dialog_start_chat_title">Start Chat?</string>
    <string name="dialog_start_chat_message_pre">"Do you want to start a new chat with "</string>
    <string name="dialog_start_chat_message_post">\?</string>
    <string name="dialog_no_identities_title">No Identities!</string>
    <string name="dialog_no_identities_message">There are no identities. You need at least one to send messges. Do you want to create a new identity now?</string>
    <string name="chat_list_empty">No Chats…</string>
    <string name="list_item_chat_title_label">Chat with Alice</string>
    <string name="list_item_chat_latest_message_label" translatable="false">@string/loading</string>
    <string name="no_messages">No Messages…</string>
    <string name="error_no_chat_selected">No Chat Selected!</string>
    <string name="action_copy_contact_info">Copy Info</string>
    <string name="action_show_qr_code">Show QR</string>
    <string name="action_copy_details_pre">"Details for "</string>
    <string name="action_copy_details_post">were copied to clipboard!</string>
    <string name="dialog_qr_code_message">You can either screenshot this dialog or let someone scan your phone to share your contact details.</string>
    <string name="dialog_qr_code_image_description">QR Code that can be shared.</string>
    <string name="dialog_qr_code_title">Share Contact…</string>
    <string name="error_no_camera_permission">Error! No Permission to use camera!</string>
    <string name="error_no_default_identity">Error! You need to set a default identity to use this feature.</string>
    <string name="hint_message">Message…</string>
    <string name="error_decoding_contact">Error decoding contact. Please try again!</string>
    <string name="action_scan_qr_code_long">Scan QR Code…</string>
    <string name="success_decoding_contact">Contact decoded successfully!</string>
    <string name="pref_summary_message_gateway">Change the URL of the message gateway.</string>
    <string name="pref_title_message_gateway">Message Gateway</string>
    <string name="pref_title_use_message_gateway">Use Message Gateway</string>
    <string name="pref_summary_use_message_gateway">When selected, the message gateway will be used instead of device-to-device routing.</string>
    <string name="pref_category_connection">Connection</string>
    <string name="hint_uri">URI</string>
    <string name="pref_title_ask_creating_chat">Ask Before Creating Chats</string>
    <string name="pref_summary_ask_creating_chat">When selected, the application will ask before creating a new chat.</string>
    <string name="pref_summary_ask_default_identity">When selected, the application will ask before setting or removing an identity as default.</string>
    <string name="pref_title_ask_default_identity">Ask Before Setting Default Identity</string>
    <string name="nav_header_connection_img_desc">Connection Indicator</string>
    <string name="pref_title_message_gateway_protocol">Message Gateway Protocol</string>
    <string name="pref_summary_message_gateway_protocol">Change the protocol to use when connecting to the message gateway.</string>
    <string name="pref_title_message_gateway_host">Message Gateway Host</string>
    <string name="pref_summary_message_gateway_host">Change the hostname of the message gateway.</string>
    <string name="pref_default_message_gateway_host" translatable="false">10.0.2.2</string>
    <string name="pref_default_message_gateway_port" translatable="false">8080</string>
    <string name="pref_default_message_gateway_path" translatable="false" />
    <string name="pref_default_message_gateway_protocol" translatable="false">http</string>
    <string name="pref_title_message_gateway_path">Message Gateway Path</string>
    <string name="pref_summary_message_gateway_path">When needed, a subpath for a message gateway can be set here.</string>
    <string name="nav_header_connection_connecting">Connecting…</string>
    <string name="nav_header_connection_error_settings">Invalid Gateway Settings!</string>
    <string name="nav_header_connection_established">Connected To Gateway!</string>
    <string name="nav_header_connection_error_uri">Invalid Connection Settings!</string>
    <string name="nav_header_connection_error_connection">Unable To Connect!</string>
    <string name="nav_header_connection_error_parsing">Error Parsing Response!</string>
    <string name="nav_header_connection_error_api_version">API Version Mismatch!</string>
    <string name="nav_header_connection_error_core_version">Core Version Mismatch!</string>
    <string name="pref_title_message_gateway_port">Message Gateway Port</string>
    <string name="pref_summary_message_gateway_port">Change the port the message gateway is using.</string>
    <string name="dialog_waiting_for_handshake_title">Waiting for Handshake…</string>
    <string name="action_back">Back</string>
    <string name="dialog_waiting_for_handshake_message_sending_handshake">Sending Handshake…</string>
    <string name="dialog_waiting_for_handshake_message_waiting_for_handshake">Waiting For Handshake…</string>
    <string name="error_unable_to_determine_participants">Unable to determine participants!</string>
    <string name="list_item_mesage_contact_name_label" translatable="false" />
    <string name="list_item_message_message_label" translatable="false" />
    <string name="list_item_mesage_message_time" translatable="false">YYYY-MM-DD HH:mm:ss</string>
</resources>