<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_chats"
            android:icon="@drawable/ic_chat_black_48dp"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_item_contacts"
            android:icon="@drawable/ic_contacts_black_48dp"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_item_identities"
            android:icon="@drawable/ic_perm_identity_black_48dp"
            android:title="@string/menu_identities" />
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/menu_settings" />
    </group>
</menu>
