<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_item_chats">

    <fragment
        android:id="@+id/nav_item_chats"
        android:name="tech.lerk.meshtalk.ui.chats.ChatsFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/nav_item_contacts"
        android:name="tech.lerk.meshtalk.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_item_identities"
        android:name="tech.lerk.meshtalk.ui.identities.IdentitiesFragment"
        android:label="@string/menu_identities"
        tools:layout="@layout/fragment_identities" />

    <fragment
        android:id="@+id/nav_item_settings"
        android:name="tech.lerk.meshtalk.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />
</navigation>