<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/list_item_message_contact_name_label"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:textStyle="bold"
        android:text="@string/list_item_mesage_contact_name_label"
        android:textColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/list_item_message_message_time"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/list_item_mesage_message_time"
        android:textColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/list_item_message_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_message_contact_name_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/list_item_message_message_label"
        android:textColor="@android:color/secondary_text_light" />

</RelativeLayout>