<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding">

    <im.delight.android.identicons.SymmetricIdenticon
        android:id="@+id/list_item_contact_identicon"
        android:layout_width="@dimen/list_identicon_size"
        android:layout_height="@dimen/list_identicon_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/list_item_contact_name_label"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/primary_text_light"
        android:layout_toEndOf="@id/list_item_contact_identicon"
        android:text="@string/list_item_contact_name_label" />

    <TextView
        android:id="@+id/list_item_contact_public_key_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_contact_name_label"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/secondary_text_light"
        android:layout_toEndOf="@id/list_item_contact_identicon"
        android:lines="2"
        android:text="@string/list_item_contact_public_key_label" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:id="@+id/list_item_contact_start_chat"
        android:src="@drawable/ic_chat_black_48dp"
        android:background="#00000000"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/list_item_contact_start_chat_hint" />

</RelativeLayout>
